Modify copy coroutine to avoid crashes

This fixes fiber usage on OpenBSD/sparc64 (which uses the copy coroutine).
It makes the following changes:

1) Don't flush register windows when saving or restoring the stack until
right before copying the stack to or from the heap. This fixes local
variables not being correct after the stack is restored. This idea was
taken directly from the Ruby 2.6 implementation.

2) Add a char[128] buffer to the coroutine_save_stack function, similar
to the VALUE[STACK_PAD_SIZE] buffer in Ruby 2.6.

3) Make sure we copy the entire current stack frame before copying the
stack to the heap by calling a function and returning the address of the
local variable inside of it (this causes a compiler warning). This is
necessary to ensure we don't have a partial copy of the current stack
frame. Ruby 2.6 does something similar using a recursive function call.

4) Rename coroutine_restore_stack to coroutine_restore_stack_0 and have
it call itself recursively as necessary using the same approach as Ruby
2.6.  Add a coroutine_restore_stack function that just calls
coroutine_restore_stack_0 with the address of a local variable.

5) Use long* instead of char*, mirroring the VALUE* used in Ruby 2.6.
VALUE can't be used directly as the coroutine implementation code does
not load ruby headers.  This helps avoid bus errors caused by alignment
issues.

6) Smear volatile over the pointers so this works without disabling
optimization.  The Ruby 2.6 implementation also used volatile.

7) Use (int)(long) cast instead of just (int) cast to avoid a compiler
warning.

Fixes [Bug #16809]